# PQLens

./: .gitignore  CHANGELOG.md  COMMERCIAL_NEXT.md  DECISIONS.md  LICENSE  NEXT_PROMPT.md  PLAN.md  PROGRESS.md  README.md  REFERENCES.md  pyproject.toml
.github/workflows/: ci.yml
src/pqlens/: __init__.py  __main__.py  _exec.py  baselines.py  compliance.py  discover.py  entropy.py  errors.py  hybrid.py  kem.py  measure.py
src/pqlens/backends/: __init__.py  base.py  openssl.py  openssl_sig.py  registry.py
src/pqlens/data/: algorithms.json  compliance.json
tests/: test_backends.py  test_baselines.py  test_cli.py  test_compliance.py  test_discover.py  test_entropy.py  test_hybrid.py  test_measure.py  test_packaging.py  test_smoke_mlkem.py
tests/fixtures/: cryptokit_snippet.swift  jwt_config.json  nginx.conf  python_app.py
